Remove uneeded code to stop alt+f4 killing the window

This fixes ksmserver not being able to logout or shutdown correctly as
it was unable to kill Plasma.

Tests showed that pressing alt+f4 no longer kills the window anyway
(possibly a change in kwin?)

BUG: 338360
REVIEW: 121004